# Mythos

./: .gitignore  BUILD.md  CMakeLists.txt  COMMANDS.txt  ROADMAP.txt  ReadMe.md  vcpkg.json  version.rc.in
.github/workflows/: cmake-single-platform.yml
lib/: Grammar.cpp  GrammarInducer.cpp  GrammarInducer.h  HalfEdgeMesh.h
lib/grammar-core/: DPORule.cpp  DPORule.h  HalfEdgeMesh.cpp  MerrellGrammar.cpp  MerrellGrammar.h  MerrellGraph.cpp  MerrellGraph.h
lib/grammar-ui/: GrammarView.cpp  GrammarView.h  GraphViewer.cpp  GraphViewer.h
lib/legacy/: Grammar.h  GrammarView.cpp  HalfEdgeMesh.cpp
shaders/: grid.frag  grid.vert  mesh.frag  mesh.vert
src/: App.cpp  App.h  AssetLibrary.cpp  AssetLibrary.h  AssetLibraryView.cpp  AssetLibraryView.h  CommandHistory.h  EditorUI.cpp  EditorUI.h  FileDialog.cpp  FileDialog.h  GltfImporter.cpp  GltfImporter.h  GrammarView.h  InputRouter.cpp  InputRouter.h  MeshAsset.cpp  MeshAsset.h  MeshMerge.cpp  MeshMerge.h  ObjImporter.cpp  ObjImporter.h  ProjectFile.cpp  ProjectFile.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneObject.h  ThumbnailRenderer.cpp  ThumbnailRenderer.h  main.cpp
